--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
     </nav>
     <div class="ctn1">
-      <img src="images/googlelogo.png" class="google-logo" alt="google-logo" />
+      <img src="images/googlelogo.png"  alt="google-logo" />
     </div>
     <div class="ctn2">
       <div class="ctn2-1">
